pick_up/background.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fonm
spec:
  containers:
  - name: main
    image: busybox
    volumeMounts:
    - name: wp-data
      mountPath: /wp
    command: ["sleep", "9999999"]
  volumes:
  - name: wp-data
    persistentVolumeClaim:
      claimName: wp-pvc
