pick_up/moodle-initial_git_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: moodle-initial
spec:
#  securityContext:
#    fsGroup: 48
#    runAsUser: 48
  containers:
  - name: main
    image: busybox
#    securityContext:
#      runAsUser: 48
    volumeMounts:
    - name: moodle-pvc
      mountPath: /moodle


    - name: git-rm
      mountPath: /git_rm
      readOnly: true


    terminationMessagePath: /var/termination-reason
#    command: [ "sh", "-c", "wget https://download.moodle.org/download.php/direct/stable38/moodle-3.8.tgz -O - | tar -xz -f - -C /moodle/ ; mv -f /moodle/moodle /moodle/html; mkdir /moodle/moodledata" ]
    command: ["sleep", "9999999"]
#    command: ["echo 1> /tmp/1 && echo 2> /tmp/2 && sleep 9999999"]
#    command: ["/bin/sh"]
#    args: ["-c", "while true; do echo hello >>/tmp/1; sleep 10;done"]
#    args: ["-c", "echo tt >> /tmp/1"]
  restartPolicy: Never
  volumes:
  - name: moodle-pvc 
    persistentVolumeClaim:
      claimName: moodle-pvc 
  - name:  git-rm
    gitRepo:
      repository: https://github.com/r-mamchur/Docker_LAMP_WordPress.git
      revision: master
      directory: .
