pick_up/moodle-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-svc-nodeport
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 80
#    nodePort: 32123
  selector:
    app: moodle
