pick_up/wp-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-svc-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
#    nodePort: 32123
  selector:
    app: wp
